# gpt-image

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-release.yml  test-install.yml
gpt_image/: __init__.py  disk.py  entry.py  geometry.py  partition.py  table.py
pygpt_disk/: disk.py  table.py
tests/: Readme.md  test_disk.py  test_entry.py  test_geometry.py  test_images.py  test_integration.py  test_partition.py  test_table.py
