[tool.poetry]
name = "pygpt-disk"
version = "0.1.0"
description = "GPT disk tool"
authors = ["Scott Wysocki <swysocki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
mypy = "^0.910"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
