[metadata]
name = gpt-image
description = Build GPT Disk Images on Local Drives
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
author = Scott Wysocki
author_email = swysocki@gmail.com
url = https://github.com/swysocki/gpt-image
license = MIT

[options]
packages = find:
python_requires = >=3.8

[flake8]
ignore = E203,W503
exclude = tests/
